--- a/sistema/sistema/src/main/resources/templates/administrativo/movimentacoes/cadastro.html
+++ b/sistema/sistema/src/main/resources/templates/administrativo/movimentacoes/cadastro.html
@@ -30,7 +30,7 @@
         }
 
         h2 {
-            font-size: 28px;
+            font-size: 32px;
             color: #343a40;
             font-weight: bold;
             margin-bottom: 20px;
@@ -168,148 +168,154 @@
     </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<div class="container">
-	        <!-- Logo à esquerda -->
-	        <a class="navbar-brand" href="#">
-	            <img src="https://sp-ao.shortpixel.ai/client/to_webp,q_glossy,ret_img,w_519,h_175/https://www.harasrosamystica.com.br/wp-content/uploads/2021/07/Logo-HRM-site.png" width="250" height="80" class="d-inline-block align-top" alt="">
-	        </a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<div class="container">
+        <!-- Logo à esquerda -->
+        <a class="navbar-brand" href="#">
+            <img src="https://sp-ao.shortpixel.ai/client/to_webp,q_glossy,ret_img,w_519,h_175/https://www.harasrosamystica.com.br/wp-content/uploads/2021/07/Logo-HRM-site.png" width="250" height="80" class="d-inline-block align-top" alt="">
+        </a>
 
-	        <!-- Botão do menu responsivo -->
-	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-	            <span class="navbar-toggler-icon"></span>
-	        </button>
+        <!-- Botão do menu responsivo -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-	        <!-- Div vazia para centralizar o menu de navegação -->
-	        <div class="d-none d-lg-flex flex-grow-1"></div>
+        <!-- Div vazia para centralizar o menu de navegação -->
+        <div class="d-none d-lg-flex flex-grow-1"></div>
 
-	        <!-- Conteúdo centralizado -->
-	        <div class="collapse navbar-collapse justify-content-center flex-grow-0" id="conteudoNavbarSuportado">
-	            <ul class="navbar-nav">
-	                <li class="nav-item active">
-	                    <a class="nav-link" href="/administrativo">Home <span class="sr-only">(página atual)</span></a>
-	                </li>
-	                <li class="nav-item">
-	                    <a class="nav-link" href="#">Link</a>
-	                </li>
-	                <li class="nav-item dropdown">
-	                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-	                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-	                        <a class="dropdown-item" href="#">Ação</a>
-	                        <a class="dropdown-item" href="#">Outra ação</a>
-	                        <div class="dropdown-divider"></div>
-	                        <a class="dropdown-item" href="#">Algo mais aqui</a>
-	                    </div>
-	                </li>
-	            </ul>
-	        </div>
-
-	        <!-- Campo de pesquisa à direita -->
-	        <form class="form-inline my-2 my-lg-0">
-	            <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-	            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Pesquisar</button>
-	        </form>
-	    </div>
-	</nav>
-
-    <!-- Main Content -->
-    <div class="col-12 d-flex justify-content-center">
-        <div class="form-container" style="width: 100%; max-width: 900px;">
-            <form action="/salvarMovimentacao" th:object="${movimentacao}" method="POST" id="movimentacaoForm">
-                <h2>Cadastro de Movimentações de Sêmen</h2>
-                <div class="custom-divider"></div>
-
-                <!-- Garanhão and Quantidade Inputs -->
-                <div class="form-row">
-                    <div class="col-12 col-md-6">
-                        <label for="garanhaoSelect" class="label-info">Selecione o Garanhão</label>
-                        <select id="garanhaoSelect" th:field="*{garanhao}" class="form-control" required>
-                            <option value="" >Escolha um Garanhão</option>
-                            <option th:each="gar : ${listarGaranhoes}" th:value="${gar.id_garanhao}" th:text="${gar.nome_garanhao}"></option>
-                        </select>
+        <!-- Conteúdo centralizado -->
+        <div class="collapse navbar-collapse justify-content-center flex-grow-0" id="conteudoNavbarSuportado">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/administrativo">Home <span class="sr-only">(página atual)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Ação</a>
+                        <a class="dropdown-item" href="#">Outra ação</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Algo mais aqui</a>
                     </div>
-					<div class="col-12 col-md-6">
-					    <div class="form-group d-flex align-items-center">
-					        <label for="quantidade" class="label-info mb-0">Quantidade de Palhetas</label>
-					        <div id="saldo-info" style="margin-left: 139px; font-size: 13px">Restam <span id="saldo-atual-palhetas">0</span> palhetas</div>
-					    </div>
-					    <input type="number" required id="quantidade" th:field="*{quantidade}" class="form-control" min="1" max="saldo-atual-palhetas" />
-					</div>
-                </div>
-
-                <!-- Botijão, Data da Movimentação Inputs -->
-				<div class="form-row">
-				    <div class="col-12 col-md-6">
-				        <label for="botijao" class="label-info">Número do Botijão</label>
-				        <input type="text" id="botijao" th:field="*{botijao}" class="form-control" readonly/>
-				    </div>
-					
-					<div class="col-12 col-md-6">
-                        <label for="destino" class="label-info">Destino</label>
-						<div id="destino" class="form-control" >
-	
-							<label>
-					            <input required type="radio" name="destino" value="venda" onclick="mostrarCampoAdicional()"> Venda
-					        </label>
-	
-							<label>
-					            <input required type="radio" name="destino" value="uso_interno" onclick="mostrarCampoAdicional()"> Uso Interno
-					        </label>
-							
-					        <label>
-					            <input required type="radio" name="destino" value="transferencia" onclick="mostrarCampoAdicional()"> Transferência
-					        </label>
-                        
-	                    </div>
-					</div>
-				</div>
-					
-                <!-- Caneca Input -->
-                <div class="form-row">
-                    <div class="col-12 col-md-6">
-                        <label for="caneca" class="label-info">Número da Caneca</label>
-                        <input type="text" id="caneca" th:field="*{caneca}" class="form-control" readonly/>
-                    </div>
-                    <div class="col-12 col-md-6">
-						<div id="campo-adicional" style="display: none;">
-						    <label for="info-adicional" class="label-info">Informação Adicional</label>
-						    <input required type="text" th:field="*{endereco}" id="info-adicional" class="form-control" placeholder="Preencha as informações">
-						</div>	
-                        
-                    </div>
-                </div>
-				
-
-                <!-- Cor da Palheta Input -->
-                <div class="form-row">
-                    <div class="col-12 col-md-6">
-                        <label for="cor_palheta" class="label-info">Cor da Palheta</label>
-                        <input type="text" id="cor_palheta" th:field="*{cor_palheta}" class="form-control" readonly/>
-                    </div>
-					
-						<div class="col-12 col-md-6">
-						<label for="data_movimentacao" class="label-info">Data da Movimentação</label>
-						<input type="text" readonly="true" th:field="*{data_movimentacao}" th:value="${#dates.format(data_movimentacao, 'dd/MM/yyyy HH:mm:ss')}" class="form-control"/>
-						</div>
-						
-                </div>
-				
-                <div class="custom-divider"></div>
-
-                <div class="d-flex justify-content-between mt-3">
-                    <a href="/administrativo" class="btn btn-danger btn-sm">
-                        <i class="fa-solid fa-rotate-left"></i> Voltar
-                    </a>
-                    <a href="/administrativo/movimentacoes/listar" class="btn btn-primary btn-sm">
-                        <i class="fa-solid fa-bars-staggered"></i> Listar
-                    </a>
-                    <button type="submit" class="btn btn-success btn-sm">
-                        <i class="fa-solid fa-plus"></i> Cadastrar Movimentação
-                    </button>
-                </div>
-            </form>
+                </li>
+            </ul>
         </div>
+
+        <!-- Campo de pesquisa à direita -->
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Pesquisar</button>
+        </form>
     </div>
+</nav>
+
+<!-- Main Content -->
+<div class="container d-flex justify-content-center align-items-center">
+	 <div class="form-container" style="width: 100%; max-width: 900px;">
+        <form action="/administrativo/movimentacoes/salvar" th:object="${movimentacao}" method="POST">
+			<div class="d-flex align-items-center justify-content-between mb-3">
+			    <a href="/administrativo" style="font-size: 32px; color: #343a40;">
+				<i class="fa-regular fa-circle-left"></i> 
+			    </a>
+			    <h2 class="m-0 text-center flex-grow-1">Cadastro de Movimentação de Sêmen</h2>
+			    <div style="width: 100px;"></div> <!-- Espaçador para alinhamento -->
+			</div>
+            <div class="custom-divider"></div>
+
+            <!-- Garanhão and Quantidade Inputs -->
+            <div class="form-row">
+                <div class="col-12 col-md-6">
+                    <label for="garanhaoSelect" class="label-info">Selecione o Garanhão</label>
+                    <select id="garanhaoSelect" th:field="*{garanhao}" class="form-control" required>
+                        <option value="" >Escolha um Garanhão</option>
+                        <option th:each="gar : ${listarGaranhoes}" th:value="${gar.id_garanhao}" th:text="${gar.nome_garanhao}"></option>
+                    </select>
+                </div>
+				<div class="col-12 col-md-6">
+				    <div class="form-group d-flex align-items-center">
+				        <label for="quantidade" class="label-info mb-0">Quantidade de Palhetas</label>
+				        <div id="saldo-info" style="margin-left: 139px; font-size: 13px">Restam <span id="saldo-atual-palhetas">0</span> palhetas</div>
+				    </div>
+				    <input type="number" required id="quantidade" th:field="*{quantidade}" class="form-control" min="1" max="saldo-atual-palhetas" />
+				</div>
+            </div>
+
+            <!-- Botijão, Data da Movimentação Inputs -->
+			<div class="form-row">
+			    <div class="col-12 col-md-6">
+			        <label for="botijao" class="label-info">Número do Botijão</label>
+			        <input type="text" id="botijao" th:field="*{botijao}" class="form-control" readonly/>
+			    </div>
+				
+				<div class="col-12 col-md-6">
+                    <label for="destino" class="label-info">Destino</label>
+					<div id="destino" class="form-control" >
+
+						<label>
+				            <input required type="radio" name="destino" value="venda" onclick="mostrarCampoAdicional()"> Venda
+				        </label>
+
+						<label>
+				            <input required type="radio" name="destino" value="uso_interno" onclick="mostrarCampoAdicional()"> Uso Interno
+				        </label>
+						
+				        <label>
+				            <input required type="radio" name="destino" value="transferencia" onclick="mostrarCampoAdicional()"> Transferência
+				        </label>
+                    
+                    </div>
+				</div>
+			</div>
+				
+            <!-- Caneca Input -->
+            <div class="form-row">
+                <div class="col-12 col-md-6">
+                    <label for="caneca" class="label-info">Número da Caneca</label>
+                    <input type="text" id="caneca" th:field="*{caneca}" class="form-control" readonly/>
+                </div>
+                <div class="col-12 col-md-6">
+					<div id="campo-adicional" style="display: none;">
+					    <label for="info-adicional" class="label-info">Informação Adicional</label>
+					    <input required type="text" th:field="*{endereco}" id="info-adicional" class="form-control" placeholder="Preencha as informações">
+					</div>	
+                    
+                </div>
+            </div>
+			
+
+            <!-- Cor da Palheta Input -->
+            <div class="form-row">
+                <div class="col-12 col-md-6">
+                    <label for="cor_palheta" class="label-info">Cor da Palheta</label>
+                    <input type="text" id="cor_palheta" th:field="*{cor_palheta}" class="form-control" readonly/>
+                </div>
+				
+					<div class="col-12 col-md-6">
+					<label for="data_movimentacao" class="label-info">Data da Movimentação</label>
+					<input type="text" readonly="true" th:field="*{data_movimentacao}" th:value="${#dates.format(data_movimentacao, 'dd/MM/yyyy HH:mm:ss')}" class="form-control"/>
+					</div>
+					
+            </div>
+			
+            <div class="custom-divider"></div>
+
+            <div class="d-flex justify-content-between mt-3">
+                <a href="/administrativo" class="btn btn-danger btn-sm">
+                    <i class="fa-solid fa-rotate-left"></i> Voltar
+                </a>
+                <a href="/administrativo/movimentacoes/listar" class="btn btn-primary btn-sm">
+                    <i class="fa-solid fa-bars-staggered"></i> Listar
+                </a>
+                <button type="submit" class="btn btn-success btn-sm">
+                    <i class="fa-solid fa-plus"></i> Cadastrar Movimentação
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
 
     <div class="watermark">LucasSales@2024</div>
 
@@ -432,5 +438,7 @@
 			    }
 			}
     </script>
+	
 </body>
+
 </html>
